@@ -38,8 +38,8 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.InetAddress;
 import java.net.SocketTimeoutException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.security.GeneralSecurityException;
@@ -48,7 +48,6 @@ import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
 import java.security.Security;
-import java.security.UnrecoverableKeyException;
 import java.security.cert.Certificate;
 import java.security.cert.CertificateException;
 import java.security.cert.CertificateFactory;
@@ -163,7 +162,7 @@ class TestCreateSignature
     }
 
     @BeforeAll
-    static void init() throws Exception
+    static void init() throws IOException, GeneralSecurityException
     {
         Security.addProvider(SecurityProvider.getProvider());
         certificateFactory = CertificateFactory.getInstance("X.509");
@@ -186,7 +185,7 @@ class TestCreateSignature
      * answer is too old".
      */
     @Test
-    void testTimeDifference() throws IOException
+    void testTimeDifference() throws IOException, URISyntaxException
     {
         SimpleDateFormat sdf = new SimpleDateFormat("dd.MM.yyyy HH:mm:ss");
 
@@ -211,7 +210,7 @@ class TestCreateSignature
             String dateString;
             try
             {
-                HttpsURLConnection con = (HttpsURLConnection) new URL("https://www.google.com/").openConnection();
+                HttpsURLConnection con = (HttpsURLConnection) new URI("https://www.google.com/").toURL().openConnection();
                 if (con.getResponseCode() != HttpsURLConnection.HTTP_OK)
                 {
                     System.out.println("Google returns " + con.getResponseCode());
@@ -454,9 +453,6 @@ class TestCreateSignature
      * been signed before.
      * 
      * @throws IOException
-     * @throws NoSuchAlgorithmException
-     * @throws CertificateException
-     * @throws UnrecoverableKeyException
      * @throws CMSException
      * @throws OperatorCreationException
      * @throws GeneralSecurityException
@@ -464,8 +460,7 @@ class TestCreateSignature
      * @throws CertificateVerificationException
      */
     @Test
-    void testPDFBox3978() throws IOException, NoSuchAlgorithmException, 
-                                        CertificateException, UnrecoverableKeyException, 
+    void testPDFBox3978() throws IOException, 
                                         CMSException, OperatorCreationException, GeneralSecurityException,
                                         TSPException, CertificateVerificationException
     {
@@ -935,9 +930,9 @@ class TestCreateSignature
             PDSignature signature = doc.getLastSignatureDictionary();
             byte[] contents = signature.getContents();
             PDDocumentCatalog docCatalog = doc.getDocumentCatalog();
-            COSDictionary dssDict = docCatalog.getCOSObject().getCOSDictionary(COSName.getPDFName("DSS"));
-            COSArray dssCertArray = dssDict.getCOSArray(COSName.getPDFName("Certs"));
-            COSDictionary vriDict = dssDict.getCOSDictionary(COSName.getPDFName("VRI"));
+            COSDictionary dssDict = docCatalog.getCOSObject().getCOSDictionary(COSName.DSS);
+            COSArray dssCertArray = dssDict.getCOSArray(COSName.CERTS);
+            COSDictionary vriDict = dssDict.getCOSDictionary(COSName.VRI);
             // Check that all known signature certificates are in the VRI/signaturehash/Cert array
             byte[] signatureHash = MessageDigest.getInstance("SHA-1").digest(contents);
             String hexSignatureHash = Hex.getString(signatureHash);
@@ -947,7 +942,7 @@ class TestCreateSignature
             HashSet<X509CertificateHolder> certificateHolderSet =
                     new HashSet<>(certificatesStore.getMatches(null));
             COSDictionary sigDict = vriDict.getCOSDictionary(COSName.getPDFName(hexSignatureHash));
-            COSArray sigCertArray = sigDict.getCOSArray(COSName.getPDFName("Cert"));
+            COSArray sigCertArray = sigDict.getCOSArray(COSName.CERT);
             Set<X509CertificateHolder> sigCertHolderSetFromVRIArray = new HashSet<>();
             for (int i = 0; i < sigCertArray.size(); ++i)
             {
@@ -963,11 +958,11 @@ class TestCreateSignature
                 {
                     continue; // not relevant here
                 }
-                // disabled until PDFBOX-5203 is fixed
-//                assertTrue(sigCertHolderSetFromVRIArray.contains(holder),
-//                        "File '" + outFile + "' Root/DSS/VRI/" + hexSignatureHash +
-//                                "/Cert array doesn't contain a certificate with subject '" +
-//                                holder.getSubject() + "' and serial " + holder.getSerialNumber());
+                assertTrue(sigCertHolderSetFromVRIArray.contains(holder),
+                        "File '" + outFile + "' Root/DSS/VRI/" + hexSignatureHash +
+                                "/Cert array doesn't contain a certificate with subject '" +
+                                holder.getSubject() +
+                                "' and serial " + holder.getSerialNumber().toString(16).toUpperCase());
             }
             // Get all certificates. Each one should either be issued (= signed) by a certificate of the set
             Set<X509Certificate> certSet = new HashSet<>();
@@ -995,9 +990,8 @@ class TestCreateSignature
                         // not the issuer
                     }
                 }
-                // disabled until PDFBOX-5203 is fixed
-//                assertTrue(verified,
-//                    "Certificate " + cert.getSubjectX500Principal() + " not issued by any certificate in the Certs array");
+                assertTrue(verified,
+                    "Certificate " + cert.getSubjectX500Principal() + " not issued by any certificate in the Certs array");
             }
             // Each CRL should be signed by one of the certificates in Certs
             Set<X509CRL> crlSet = new HashSet<>();
@@ -1037,7 +1031,7 @@ class TestCreateSignature
                 
                 // Check that the issueing certificate is in the VRI array
                 COSDictionary crlSigDict = vriDict.getCOSDictionary(COSName.getPDFName(hexCrlSignatureHash));
-                COSArray certArray2 = crlSigDict.getCOSArray(COSName.getPDFName("Cert"));
+                COSArray certArray2 = crlSigDict.getCOSArray(COSName.CERT);
                 COSStream certStream = (COSStream) certArray2.getObject(0);
                 X509CertificateHolder certHolder2;
                 try (InputStream is2 = certStream.createInputStream())
@@ -1078,7 +1072,7 @@ class TestCreateSignature
                 COSDictionary ocspSigDict = vriDict.getCOSDictionary(COSName.getPDFName(hexOcspSignatureHash));
 
                 // Check that the Cert is in the VRI array
-                COSArray certArray2 = ocspSigDict.getCOSArray(COSName.getPDFName("Cert"));
+                COSArray certArray2 = ocspSigDict.getCOSArray(COSName.CERT);
                 COSStream certStream = (COSStream) certArray2.getObject(0);
                 X509CertificateHolder certHolder2;
                 try (InputStream is2 = certStream.createInputStream())
